--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Deploy 3dfolio with GitHub Pages dependencies preinstalled
 
 on:
   push:
@@ -20,14 +20,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
       - name: Install dependencies
-        run: npm install
-      - name: Build with Jekyll
+        run: npm ci
+      - name: Build with Vite
         run: npm run build
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-artifact
+          path: dist
 
   deploy:
     environment:
@@ -36,8 +41,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - name: Install dependencies
+        run: npm ci
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build-artifact
+          path: dist
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
-      - name: Start Jekyll site
-        run: npm run start
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_dir: ./dist
+          deploy_key: ${{ secrets.GITHUB_TOKEN }}
